--- a/less/type.less
+++ b/less/type.less
@@ -81,12 +81,6 @@ small,
 // Undo browser default styling
 cite    { font-style: normal; }
 
-mark,
-.mark {
-  background-color: @state-warning-bg;
-  padding: .2em;
-}
-
 // Alignment
 .text-left           { text-align: left; }
 .text-right          { text-align: right; }
@@ -147,7 +141,7 @@ mark,
 
 
 // Lists
-// -------------------------
+// --------------------------------------------------
 
 // Unordered and Ordered lists
 ul,
@@ -201,12 +195,8 @@ dd {
 // Defaults to being stacked without any of the below styles applied, until the
 // grid breakpoint is reached (default of ~768px).
 
-.dl-horizontal {
-  dd {
-    &:extend(.clearfix all); // Clear the floated `dt` if an empty `dd` is present
-  }
-
-  @media (min-width: @grid-float-breakpoint) {
+@media (min-width: @grid-float-breakpoint) {
+  .dl-horizontal {
     dt {
       float: left;
       width: (@component-offset-horizontal - 20);
@@ -216,13 +206,13 @@ dd {
     }
     dd {
       margin-left: @component-offset-horizontal;
+      &:extend(.clearfix all); // Clear the floated `dt` if an empty `dd` is present
     }
   }
 }
 
-
-// Misc
-// -------------------------
+// MISC
+// ----
 
 // Abbreviations and acronyms
 abbr[title],
