--- a/less/variables.less
+++ b/less/variables.less
@@ -74,7 +74,7 @@
 
 @icon-font-path:          "../fonts/";
 @icon-font-name:          "glyphicons-halflings-regular";
-@icon-font-svg-id:				"glyphicons_halflingsregular";
+@icon-font-svg-id:        "glyphicons_halflingsregular";
 
 //== Components
 //
@@ -232,7 +232,7 @@
 //** Text color for headers within dropdown menus.
 @dropdown-header-color:          @gray-light;
 
-// Note: Deprecated @dropdown-caret-color as of v3.1
+// Note: Deprecated @dropdown-caret-color as of v3.1.0
 @dropdown-caret-color:           #000;
 
 
@@ -301,28 +301,48 @@
 @grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
 
 
+//== Container sizes
+//
+//## Define the maximum width of `.container` for different screen sizes.
+
+// Small screen / tablet
+@container-tablet:             ((720px + @grid-gutter-width));
+//** For `@screen-sm-min` and up.
+@container-sm:                 @container-tablet;
+
+// Medium screen / desktop
+@container-desktop:            ((940px + @grid-gutter-width));
+//** For `@screen-md-min` and up.
+@container-md:                 @container-desktop;
+
+// Large screen / wide desktop
+@container-large-desktop:      ((1140px + @grid-gutter-width));
+//** For `@screen-lg-min` and up.
+@container-lg:                 @container-large-desktop;
+
+
 //== Navbar
 //
 //##
 
 // Basics of a navbar
-@navbar-height:                    50px;
+@navbar-height:                    44px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
-@navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
-@navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
+@navbar-padding-horizontal:        0;
+@navbar-padding-vertical:          0;
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color:             #777;
-@navbar-default-bg:                #f8f8f8;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-color:             #00acba;
+@navbar-default-bg:                #00acba;
+@navbar-default-border:            #00acba;
 
 // Navbar links
-@navbar-default-link-color:                #777;
-@navbar-default-link-hover-color:          #333;
+@navbar-default-link-color:                #fff;
+@navbar-default-link-hover-color:          #fff;
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #555;
-@navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-link-active-color:         #fff;
+@navbar-default-link-active-bg:            #017d87;
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
 
@@ -505,9 +525,9 @@
 //** Popover outer arrow width
 @popover-arrow-outer-width:           (@popover-arrow-width + 1);
 //** Popover outer arrow color
-@popover-arrow-outer-color:           rgba(0,0,0,.25);
+@popover-arrow-outer-color:           fadein(@popover-border-color, 5%);
 //** Popover outer arrow fallback color
-@popover-arrow-outer-fallback-color:  #999;
+@popover-arrow-outer-fallback-color:  darken(@popover-fallback-border-color, 20%);
 
 
 //== Labels
@@ -634,6 +654,7 @@
 @list-group-active-text-color:  lighten(@list-group-active-bg, 40%);
 
 @list-group-link-color:         #555;
+@list-group-link-hover-color:   @list-group-link-color;
 @list-group-link-heading-color: #333;
 
 
@@ -643,8 +664,6 @@
 
 @panel-bg:                    #fff;
 @panel-body-padding:          15px;
-@panel-heading-padding:       10px 15px;
-@panel-footer-padding:        @panel-heading-padding;
 @panel-border-radius:         @border-radius-base;
 
 //** Border color for elements within panels
@@ -792,12 +811,13 @@
 @headings-small-color:        @gray-light;
 //** Blockquote small color
 @blockquote-small-color:      @gray-light;
+//** Blockquote font size
+@blockquote-font-size:        (@font-size-base * 1.25);
 //** Blockquote border color
 @blockquote-border-color:     @gray-lighter;
 //** Page header border color
 @page-header-border-color:    @gray-lighter;
-//** Blockquote font size
-@blockquote-font-size:        (@font-size-base * 1.25);
+
 
 //== Miscellaneous
 //
@@ -808,261 +828,3 @@
 
 //** Horizontal offset for forms and lists.
 @component-offset-horizontal: 180px;
-
-
-//== Container sizes
-//
-//## Define the maximum width of `.container` for different screen sizes.
-
-// Small screen / tablet
-@container-tablet:             ((720px + @grid-gutter-width));
-//** For `@screen-sm-min` and up.
-@container-sm:                 @container-tablet;
-
-// Medium screen / desktop
-@container-desktop:            ((940px + @grid-gutter-width));
-//** For `@screen-md-min` and up.
-@container-md:                 @container-desktop;
-
-// Large screen / wide desktop
-@container-large-desktop:      ((1140px + @grid-gutter-width));
-//** For `@screen-lg-min` and up.
-@container-lg:                 @container-large-desktop;
-
-
-/*
-* pikock http://www.pikock.com/ , autreplanete http://www.autreplanete.com/
-*
-**/
-
-
-// Grays
-@gray-darker: #222222;
-@gray-dark: #333333;
-@gray: #555555;
-@gray-light: #999999;
-@gray-lighter: #eeeeee;
-
-
-// Brand Colors
-@brand-primary: #00acba;
-@brand-success: #3f9e76;
-@brand-warning: darken(#fdb515, 10%);
-@brand-danger: #a02f2b;
-@brand-info: #60888D;
-
-
-// Scaffolding
-@body-bg: #fff;
-@text-color: @gray-dark;
-@link-color: @brand-primary;
-@link-hover-color: darken(@link-color, 15%);
-@padding-base-vertical: 6px;
-@padding-base-horizontal: 12px;
-@padding-large-vertical: 10px;
-@padding-large-horizontal: 16px;
-@padding-small-vertical: 5px;
-@padding-small-horizontal: 10px;
-@border-radius-base: 4px;
-@border-radius-large: 6px;
-@border-radius-small: 3px;
-@line-height-large: 1.33;
-@line-height-small: 1.5;
-@component-active-bg: @brand-primary;
-
-
-// Typography
-@font-family-sans-serif: Open Sans;
-@font-family-serif: PT Serif;
-@font-family-monospace: Monaco;
-@font-family-base: @font-family-sans-serif;
-@font-size-base: 14px;
-@font-size-large: ceil((@font-size-base * 1.25));
-@font-size-small: ceil((@font-size-base * 0.85));
-@line-height-base: 1.428571429;
-@line-height-computed: floor((@font-size-base * @line-height-base));
-@headings-font-family: @font-family-base;
-@headings-font-weight: 500;
-@headings-line-height: 1.1;
-
-
-// Buttons
-@btn-font-weight: normal;
-@btn-default-color: #333;
-@btn-default-bg: #fff;
-@btn-default-border: #ccc;
-@btn-primary-color: #fff;
-@btn-primary-bg: @brand-primary;
-@btn-primary-border: darken(@btn-primary-bg, 5%);
-@btn-success-color: #fff;
-@btn-success-bg: @brand-success;
-@btn-success-border: darken(@btn-success-bg, 5%);
-@btn-warning-color: #fff;
-@btn-warning-bg: @brand-warning;
-@btn-warning-border: darken(@btn-warning-bg, 5%);
-@btn-danger-color: #fff;
-@btn-danger-bg: @brand-danger;
-@btn-danger-border: darken(@btn-danger-bg, 5%);
-@btn-info-color: #fff;
-@btn-info-bg: @brand-info;
-@btn-info-border: darken(@btn-info-bg, 5%);
-@btn-link-disabled-color: @gray-light;
-
-
-// Dropdowns
-@dropdown-bg: #fff;
-@dropdown-border: rgba(0,0,0,.15);
-@dropdown-divider-bg: #e5e5e5;
-@dropdown-link-active-color: #fff;
-@dropdown-link-active-bg: @component-active-bg;
-@dropdown-link-color: @gray-dark;
-@dropdown-link-hover-color: #fff;
-@dropdown-link-hover-bg: @dropdown-link-active-bg;
-@dropdown-link-disabled-color: @gray-light;
-@dropdown-header-color: @gray-light;
-@dropdown-caret-color: #000;
-
-
-// Forms
-@input-bg: #fff;
-@input-bg-disabled: @gray-lighter;
-@input-color: @gray;
-@input-border: #ccc;
-@input-border-radius: @border-radius-base;
-@input-color-placeholder: @gray-light;
-@input-height-base: (@line-height-computed + (@padding-base-vertical * 2) + 2);
-@input-height-large: (floor(@font-size-large * @line-height-large) + (@padding-large-vertical * 2) + 2);
-@input-height-small: (floor(@font-size-small * @line-height-small) + (@padding-small-vertical * 2) + 2);
-@legend-color: @gray-dark;
-@legend-border-color: #e5e5e5;
-@input-group-addon-bg: @gray-lighter;
-@input-group-addon-border-color: @input-border;
-
-
-// Table
-@table-cell-padding: 8px;
-@table-condensed-cell-padding: 5px;
-@table-cell-padding: 8px;
-@table-condensed-cell-padding: 5px;
-@table-bg: transparent;
-@table-bg-accent: #f9f9f9;
-@table-bg-hover: #f5f5f5;
-@table-bg-active: @table-bg-hover;
-@table-border-color: #ddd;
-
-
-// Navbar
-@navbar-height: 50px;
-@navbar-margin-bottom: @line-height-computed;
-@navbar-default-color: #777;
-@navbar-default-bg: #f8f8f8;
-@navbar-default-border: darken(@navbar-default-bg, 6.5%);
-@navbar-border-radius: @border-radius-base;
-@navbar-padding-horizontal: floor((@grid-gutter-width / 2));
-@navbar-padding-vertical: (((@navbar-height - @line-height-computed) / 2));
-@navbar-default-link-color: #777;
-@navbar-default-link-hover-color: #333;
-@navbar-default-link-hover-bg: transparent;
-@navbar-default-link-active-color:  #555;
-@navbar-default-link-active-bg: darken(@navbar-default-bg, 6.5%);
-@navbar-default-link-disabled-color:  #ccc;
-@navbar-default-link-disabled-bg: transparent;
-@navbar-default-brand-color: @navbar-default-link-color;
-@navbar-default-brand-hover-color: darken(@navbar-default-link-color, 10%);
-@navbar-default-brand-hover-bg: transparent;
-@navbar-default-toggle-hover-bg: #ddd;
-@navbar-default-toggle-icon-bar-bg: #ccc;
-@navbar-default-toggle-border-color: #ddd;
-
-
-// Navs Tabs
-@nav-link-padding: 10px 15px;
-@nav-link-hover-bg: @gray-lighter;
-@nav-disabled-link-color: @gray-light;
-@nav-disabled-link-hover-color: @gray-light;
-@nav-tabs-border-color: #ddd;
-@nav-tabs-link-hover-border-color: @gray-lighter;
-@nav-tabs-active-link-hover-bg: @body-bg;
-@nav-tabs-active-link-hover-color: @gray;
-@nav-tabs-active-link-hover-border-color: #ddd;
-@nav-tabs-justified-link-border-color: #ddd;
-@nav-tabs-justified-active-link-border-color: @body-bg;
-@nav-pills-active-link-hover-bg: @component-active-bg;
-@nav-pills-active-link-hover-color: #fff;
-
-
-// Jumbotron
-@jumbotron-padding: 30px;
-@jumbotron-color: inherit;
-@jumbotron-bg: @gray-lighter;
-
-
-// Pagination
-@pagination-bg: #fff;
-@pagination-border: #ddd;
-@pagination-hover-bg: @gray-lighter;
-@pagination-active-bg: @brand-primary;
-@pagination-active-color: #fff;
-@pagination-disabled-color: @gray-light;
-@pager-border-radius: 15px;
-@pager-disabled-color: @gray-light;
-
-
-// Form States
-@state-warning-text: darken(#fdb515, 10%);
-@state-warning-bg: #fcf8e3;
-@state-warning-border: darken(spin(@state-warning-bg, -10), 3%);
-@state-danger-text: #a02f2b;
-@state-danger-bg: #f2dede;
-@state-danger-border: darken(spin(@state-danger-bg, -10), 3%);
-@state-success-text: darken(#3f9e76, 10%);
-@state-success-bg: #dff0d8;
-@state-success-border: darken(spin(@state-success-bg, -10), 5%);
-@state-info-text: darken(#60888D, 10%);
-@state-info-bg: #d9edf7;
-@state-info-border: darken(spin(@state-info-bg, -10), 7%);
-
-
-// ToolTip
-@tooltip-max-width: 200px;
-@tooltip-color: #fff;
-@tooltip-bg: #000;
-@tooltip-arrow-width: 5px;
-@tooltip-arrow-color: @tooltip-bg;
-
-
-// Popover
-@popover-bg: #fff;
-@popover-max-width: 276px;
-@popover-border-color: rgba(0,0,0,.2);
-@popover-fallback-border-color: #ccc;
-@popover-title-bg: darken(@popover-bg, 3%);
-@popover-arrow-width: 10px;
-@popover-arrow-color: #fff;
-@popover-arrow-outer-width: (@popover-arrow-width + 1);
-@popover-arrow-outer-color: rgba(0,0,0,.25);
-@popover-arrow-outer-fallback-color: #999;
-
-
-// List Group
-@list-group-bg: #fff;
-@list-group-border: #ddd;
-@list-group-border-radius: @border-radius-base;
-@list-group-hover-bg: #f5f5f5;
-@list-group-active-color: #fff;
-@list-group-active-bg: @component-active-bg;
-@list-group-active-border: @list-group-active-bg;
-@list-group-link-color: #555;
-@list-group-link-heading-color: #333;
-@list-group-link-hover-color:   @list-group-link-color;
-
-//** Text color of disabled list items
-@list-group-disabled-color:      @gray-light;
-//** Background color of disabled list items
-@list-group-disabled-bg:         @gray-lighter;
-//** Text color for content within disabled list items
-@list-group-disabled-text-color: @list-group-disabled-color;
-
-// Sprites
-@icon-font-path: '../app/fonts/';
-@icon-font-name: glyphicons-halflings-regular;
